--- a/_quarto.yml
+++ b/_quarto.yml
@@ -36,7 +36,7 @@ book:
     
   sidebar:
     style: "docked"
-    # logo: "images/swamp-logo.jpg"
+    logo: "images/swamp-iq-logos.png"
     # type: "light"
     # background: "#002151"
     # foreground: "light"
