create data life cycle page; add placeholder for communication norms in expectations doc; update yml

--- a/_quarto.yml
+++ b/_quarto.yml
@@ -31,6 +31,7 @@ book:
         - procurement.qmd
         - offboarding.qmd
     
+    - lifecycle.qmd
     - contacts.qmd
     - contribute.qmd
     - references.qmd
