add inspiration page to yml (duh!)

--- a/_quarto.yml
+++ b/_quarto.yml
@@ -34,6 +34,7 @@ book:
     - lifecycle.qmd
     - contacts.qmd
     - contribute.qmd
+    - inspiration.qmd
     - references.qmd
     
   sidebar:
