--- a/_quarto.yml
+++ b/_quarto.yml
@@ -1,57 +1,76 @@
 project:
-  type: book
+  type: website
 
-book:
+website:
+  page-navigation: true
   title: "SWAMP Manual"
-  author: "CA Surface Water Ambient Monitoring Program (SWAMP)"
-  date: "2023-02-03"
-  search: true
+  site-url: "https://cawaterboarddatacenter.github.io/swamp-manual/" 
   repo-url: https://github.com/CAWaterBoardDataCenter/swamp-manual
-  repo-actions: [edit, issue]
-  downloads: [pdf, epub]
-  sharing: [twitter, facebook]
-  chapters:
+  repo-actions: [edit, source, issue]
   
-    - index.qmd
-    - about-swamp.qmd
-    
-    - part: Culture
-      chapters:
-        - values.qmd
-        - codeofconduct.qmd
-        - expectations.qmd
-        - development.qmd
-    
-    - part: Administrative goodies
-      chapters: 
-        - onboarding.qmd
-        - tech.qmd
-        - training.qmd
-        - travel.qmd
-        - procurement.qmd
-        - offboarding.qmd
-    
-    - lifecycle.qmd
-    - contacts.qmd
-    - contribute.qmd
-    - inspiration.qmd
-    - references.qmd
-    
-  sidebar:
-    style: "docked"
-    logo: "images/swamp-iq-logos.png"
-    # type: "light"
-    # background: "#002151"
-    # foreground: "light"
-    border: true
+ page-footer:
+    right: "This manual is built with ❤️ and [Quarto](https://quarto.org/)."
+    left: "&copy; CC-By CA Water Board, 2023"
 
+  sidebar:
+    logo: "images/logo-transparent.png"
+    favicon: images/swamp-iq-logos.png
+    pinned: true
+    align: center
+    tools: 
+      - icon: globe
+        href: https://www.waterboards.ca.gov/water_issues/programs/swamp/
+        text: "SWAMP"
+      - icon: github
+        href: https://cawaterboarddatacenter.github.io/swamp-manual/
+        text: "SWAMP Manual"
+              
+    style: "docked"
+      search: true
+      collapse-level: 1
+      contents:
+        - href: index.qmd
+          text: Welcome!
+        - section: about/index.qmd
+          text: About SWAMP
+          contents:
+          - about/lifecycle.qmd
+          - about/contacts.qmd
+        - section: culture/index.qmd
+          text: Culture
+          contents:
+            - culture/values.qmd
+            - culture/codeofconduct.qmd
+            - culture/expectations.qmd
+            - culture/development.qmd
+        - section: admin/index.qmd
+          text: Administrative Goodies
+          contents:
+            - admin/onboarding.qmd
+            - admin/tech.qmd
+            - admin/training.qmd
+            - admin/travel.qmd
+            - admin/procurement.qmd
+            - admin/offboarding.qmd
+        - href: contribute.qmd
+          text: Contibuting
+        - href: inspiration.qmd
+          text: Inspiration
+    
 format:
   html:
-    theme: cosmo
-  pdf:
-    documentclass: scrreprt
+    theme:
+      light: [cosmo, theme.scss] # from https://github.com/sta210-s22/website/blob/main/_quarto.yml
+      dark: [cosmo, theme-dark.scss]
+    code-copy: true
+    code-overflow: wrap
+    toc: true
+    fontsize: 1em
 
-editor: visual
 
-# comments:
-#   hypothesis: true
+filters:
+  - include-files.lua
+  - quarto
+
+execute:
+  freeze: auto
